fixed issue of when pressing start on top element it jumping to a random 4th element or something

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -73,6 +73,14 @@ body {
 		color: #AAA;
 		-moz-border-radius: 15px;
 		border-radius: 15px;
+
+		#task-title {
+			margin-left: 15px;
+		}
+
+		#task-display-time {
+			float: right;
+		}
 	}
 }
 
